# qrcode

./: .gitignore  Dockerfile  cabal.project
.devcontainer/: devcontainer.json
qrcode-core/: qrcode-core.cabal
qrcode-core/src/Codec/QRCode/Code/: Intermediate.hs
qrcode-juicypixels/: qrcode-juicypixels.cabal
