cabal-version: 3.0

name:           qrcode-core
version:        0.9.10
synopsis:       QR code library in pure Haskell
description:    Please see the README on GitHub at <https://github.com/alexkazik/qrcode/qrcode-core#readme>
category:       codec
homepage:       https://github.com/alexkazik/qrcode#readme
bug-reports:    https://github.com/alexkazik/qrcode/issues
author:         ALeX Kazik
maintainer:     alex@kazik.de
copyright:      2018 ALeX Kazik
license:        MIT
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/alexkazik/qrcode

library
  exposed-modules:
      Codec.QRCode
      Codec.QRCode.Intermediate
      Codec.QRCode.Intermediate.Special
      Codec.QRCode.Data.ErrorLevel
      Codec.QRCode.Data.Mask
      Codec.QRCode.Data.QRImage
      Codec.QRCode.Data.QRCodeOptions
      Codec.QRCode.Data.QRIntermediate
      Codec.QRCode.Data.QRSegment
      Codec.QRCode.Data.Result
      Codec.QRCode.Data.TextEncoding
      Codec.QRCode.Data.ToInput
  other-modules:
      Codec.QRCode.Base
      Codec.QRCode.Code.Data
      Codec.QRCode.Code.Image
      Codec.QRCode.Code.Intermediate
      Codec.QRCode.Code.Mask
      Codec.QRCode.Code.ReedSolomonEncoder
      Codec.QRCode.Data.ByteStreamBuilder
      Codec.QRCode.Data.MQRImage
      Codec.QRCode.Data.QRIntermediate.Internal
      Codec.QRCode.Data.QRSegment.Internal
      Codec.QRCode.Data.Version
      Codec.QRCode.Mode.Alphanumeric
      Codec.QRCode.Mode.Automatic
      Codec.QRCode.Mode.Byte
      Codec.QRCode.Mode.ECI
      Codec.QRCode.Mode.Kanji
      Codec.QRCode.Mode.Mixed
      Codec.QRCode.Mode.Numeric
      Paths_qrcode_core
  hs-source-dirs:
      src
  build-depends:
      base
    , binary
    , bytestring
    , case-insensitive
    , containers
    , dlist
    , primitive
    , text
    , vector
  default-language: GHC2021
